fix(chat): fixed chat list margins for when scrollbars are enabled on mac

--- a/app/client/stylesheets/components/pu-chat.sass
+++ b/app/client/stylesheets/components/pu-chat.sass
@@ -171,11 +171,13 @@
         .pu-sidebar-wrap
             overflow: auto
             height: 100%
+            overflow-x: hidden
 
             section
                 input.pu-input
                     margin-bottom: 20px
-
+                .pu-list
+                        min-width: 375px
             > section:after
                 background-color: #eee
 
